--Added some NavLinks to to SignInand SignOut

--- a/BlazorServerIdentity2/Shared/LoginDisplay.razor
+++ b/BlazorServerIdentity2/Shared/LoginDisplay.razor
@@ -1,11 +1,21 @@
-﻿<AuthorizeView>
+﻿@using System.Security.Claims;
+@using Microsoft.AspNetCore.Identity
+@using BlazorServerIdentity2.Areas.Identity;
+
+<AuthorizeView>
     <Authorized>
         <a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>
+        <NavLink class="nav-link" href="/SignOut">
+            <span class="oi oi-account-logout" aria-hidden="true"></span> Sign Out
+        </NavLink>
         <form method="post" action="Identity/Account/LogOut">
             <button type="submit" class="nav-link btn btn-link">Log out</button>
         </form>
     </Authorized>
     <NotAuthorized>
+        <NavLink class="nav-link" href="/SignIn" >
+            <span class="oi oi-account-login" aria-hidden="true"></span> Sign In
+        </NavLink>
         <a href="Identity/Account/Register">Register</a>
         <a href="Identity/Account/Login">Log in</a>
     </NotAuthorized>
