Added components to imports

--- a/BlazorServerIdentity2/_Imports.razor
+++ b/BlazorServerIdentity2/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using BlazorServerIdentity2
 @using BlazorServerIdentity2.Shared
+@using BlazorServerIdentity2.Components 
