* Modified to display a SignUp item.

--- a/BlazorServerIdentity2/Shared/LoginDisplay.razor
+++ b/BlazorServerIdentity2/Shared/LoginDisplay.razor
@@ -5,6 +5,7 @@
 <AuthorizeView>
     <Authorized>
         <a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>
+
         <NavLink class="nav-link" href="/SignOut">
             <span class="oi oi-account-logout" aria-hidden="true"></span> Sign Out
         </NavLink>
@@ -13,7 +14,10 @@
         </form>
     </Authorized>
     <NotAuthorized>
-        <NavLink class="nav-link" href="/SignIn" >
+        <NavLink class="nav-link" href="/SignUp">
+            <span class="oi oi-pencil" aria-hidden="true"></span> Sign Up
+        </NavLink>
+        <NavLink class="nav-link" href="/SignIn">
             <span class="oi oi-account-login" aria-hidden="true"></span> Sign In
         </NavLink>
         <a href="Identity/Account/Register">Register</a>
